k8s/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 2                    # 要 2 个副本
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: nginx:alpine     # 注意：需要能拉到的镜像（minikube 用 DaoCloud 加速）
          ports:
            - containerPort: 80
