k8s/external-services.yaml
# 把宿主机的中间件端口抽象成 K8s Service
# IP 变时，只需要修改下面的 externalName，业务 Deployment/ConfigMap 完全不用动
# 也可以配合 deploy.sh 动态生成此文件
apiVersion: v1
kind: Service
metadata:
  name: mysql-host
spec:
  type: ExternalName
  externalName: host.minikube.internal
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-host
spec:
  type: ExternalName
  externalName: host.minikube.internal
---
apiVersion: v1
kind: Service
metadata:
  name: redis-host
spec:
  type: ExternalName
  externalName: host.minikube.internal
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-host
spec:
  type: ExternalName
  externalName: host.minikube.internal
