k8s/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - port: 80                # Service 内部端口
      targetPort: 80          # Pod 的端口
      nodePort: 30080         # 对外暴露端口（30000-32767）
