k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 192.168.1.2:8888/mini-mall/order-service:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
