k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 192.168.1.2:8888/mini-mall/user-service:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
