k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-mall-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mini-mall.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 8081
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 8083
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 8080
